# mlconfig

./: .pre-commit-config.yaml  Makefile  README.md  justfile  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  bump-version.yml  dependabot.yml  lint.yml  main.yml  publish.yaml  publish.yml  python.yaml  test.yml  unittest.yml
example/: conf.yaml  config.yaml  example.py  main.py
mlconfig/: __init__.py  collections.py  conf.py  config.py  utils.py
mlconfig/torch/: __init__.py
src/mlconfig/: __init__.py  conf.py
src/mlconfig/torch/: __init__.py
tests/: test.json  test.yaml  test_collections.py  test_conf.py  test_config.py  test_utils.py
